Implementierung der HttpBank